--- a/to_do_list.html
+++ b/to_do_list.html
@@ -5,352 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List - SmartCampus Dashboard</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            margin: 0;
-            background: #f8fafc;
-            color: #0f172a;
-        }
-
-        .app {
-            display: grid;
-            grid-template-columns: 260px 1fr;
-            min-height: 100vh;
-        }
-
-        aside.sidebar {
-            position: sticky;
-            top: 0;
-            align-self: start;
-            height: 100vh;
-            background: #0f172a;
-            color: #e5e7eb;
-            padding: 18px 14px;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-            width: 260px;
-            overflow-x: hidden;
-        }
-
-        .tools {
-            margin-top: auto;
-            display: grid;
-            gap: 8px;
-        }
-
-        .tool-btn {
-            width: 100%;
-            border: 0;
-            border-radius: 12px;
-            padding: 10px 12px;
-            background: rgba(255, 255, 255, 0.06);
-            color: #e5e7eb;
-            cursor: pointer;
-        }
-
-        .brand {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-weight: 800;
-            letter-spacing: 0.2px;
-            padding: 0 6px;
-        }
-
-        .brand .logo {
-            width: 36px;
-            height: 36px;
-            border-radius: 12px;
-            background: linear-gradient(135deg, #3b82f6, #60a5fa);
-            color: white;
-            font-weight: bold;
-            display: grid;
-            place-items: center;
-            font-size: 1.2rem;
-            flex-shrink: 0;
-        }
-
-        .nav {
-            margin-top: 6px;
-            display: grid;
-            gap: 6px;
-        }
-
-        .nav a {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            text-decoration: none;
-            color: inherit;
-            padding: 10px 12px;
-            border-radius: 12px;
-            transition: 120ms ease;
-        }
-
-        .nav a:hover {
-            background: rgba(255, 255, 255, 0.06);
-        }
-
-        .nav a.active {
-            background: rgba(255, 255, 255, 0.12);
-            box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.08);
-        }
-
-        .topbar {
-            /* CHANGED from main>header */
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            padding: 1rem 2rem;
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(8px);
-            border-bottom: 1px solid #e2e8f0;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-        }
-
-        .header-right {
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-        }
-
-        .user-profile {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background: #e2e8f0;
-            display: grid;
-            place-items: center;
-            font-weight: 600;
-            color: #475569;
-        }
-
-        .container {
-            max-width: 1100px;
-            margin: 2.5rem auto;
-            padding: 0 1.5rem;
-        }
-
-        .title-section h2 {
-            font-size: 2rem;
-            margin-bottom: .3rem;
-        }
-
-        .title-section p {
-            color: #475569;
-            font-size: 1.1rem;
-            margin-top: 0;
-        }
-
-        /* --- To-Do Specific Styles --- */
-        .panel {
-            background: #ffffff;
-            border-radius: 15px;
-            padding: 1.5rem;
-            border: 1px solid #e2e8f0;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.05);
-            margin-bottom: 1.5rem;
-        }
-
-        .add-task-form {
-            display: flex;
-            gap: 1rem;
-            align-items: flex-end;
-        }
-
-        .form-group {
-            flex-grow: 1;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-            font-size: 0.9rem;
-        }
-
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: .8rem;
-            border-radius: 8px;
-            border: 1px solid #cbd5e1;
-            font-size: 1rem;
-            box-sizing: border-box;
-        }
-
-        .btn {
-            padding: 0.8rem 1.5rem;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 1rem;
-            transition: all 0.2s ease;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            text-decoration: none;
-        }
-
-        .btn-primary {
-            background: #3b82f6;
-            color: white;
-            box-shadow: 0 4px 14px rgba(59, 130, 246, 0.25);
-        }
-
-        .btn:hover {
-            opacity: 0.9;
-            transform: translateY(-2px);
-        }
-
-        .controls {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 1.5rem;
-        }
-
-        .filter-bar {
-            display: inline-flex;
-            align-items: center;
-            background: #e2e8f0;
-            padding: .4rem;
-            border-radius: 99px;
-        }
-
-        .filter-btn {
-            padding: .5rem 1.2rem;
-            border-radius: 99px;
-            border: none;
-            background: transparent;
-            color: #475569;
-            cursor: pointer;
-            font-weight: 600;
-            transition: all 0.25s;
-        }
-
-        /* NEW hover effect for non-active buttons */
-        .filter-btn:hover {
-            background-color: #f1f5f9;
-        }
-
-        .filter-btn.active {
-            background: #ffffff;
-            color: #3b82f6;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        /* When the active button is hovered, we want it to stay white, not turn grey */
-        .filter-btn.active:hover {
-            background-color: #ffffff;
-        }
-
-        .task-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .task-item {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            padding: 1.25rem 0.5rem;
-            border-bottom: 1px solid #e2e8f0;
-            transition: opacity 0.3s ease;
-        }
-
-        .task-list li:last-child .task-item {
-            border-bottom: none;
-        }
-
-        .task-item.completed {
-            opacity: 0.5;
-        }
-
-        .task-item.completed .task-title {
-            text-decoration: line-through;
-        }
-
-        .task-check input {
-            width: 20px;
-            height: 20px;
-            cursor: pointer;
-        }
-
-        .task-details {
-            flex-grow: 1;
-        }
-
-        .task-title {
-            font-size: 1.1rem;
-            font-weight: 500;
-        }
-
-        .task-meta {
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            font-size: 0.9rem;
-            color: #475569;
-            margin-top: 0.25rem;
-        }
-
-        .tag {
-            padding: 0.25rem 0.75rem;
-            border-radius: 99px;
-            font-size: 0.8rem;
-            font-weight: 600;
-            color: white;
-        }
-
-        .tag-academic {
-            background-color: #8b5cf6;
-            /* Violet */
-        }
-
-        .tag-personal {
-            background-color: #ec4899;
-            /* Pink */
-        }
-
-        .tag-club {
-            background-color: #14b8a6;
-            /* Teal */
-        }
-
-        .task-actions {
-            display: flex;
-            gap: 0.5rem;
-        }
-
-        .action-btn {
-            background: transparent;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2rem;
-            padding: 0.5rem;
-            border-radius: 50%;
-            width: 36px;
-            height: 36px;
-            display: grid;
-            place-items: center;
-            transition: background-color 0.2s ease;
-        }
-
-        .action-btn:hover {
-            background-color: #f1f5f9;
-        }
-    </style>
+    <link rel="stylesheet" href="to_do_list.css">
 </head>
 
 <body>
