--- a/myvault.html
+++ b/myvault.html
@@ -21,7 +21,7 @@
                 <a href="#complaints">📢 Complaints</a>
                 <a href="#lostfound">🔎 Lost & Found</a>
                 <a class="active" href="#attendance">📅 Attendance</a>
-                <a href="#todo">📝 To‑Do</a>
+                <a href="#todo">📝 To-Do</a>
                 <a href="#calendar">🗓 Calendar</a>
             </nav>
             <div class="tools">
