--- a/myvault.html
+++ b/myvault.html
@@ -16,14 +16,14 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="#">🏠 Dashboard</a>
-                <a href="#myvault">📂 MyVault</a>
-                <a href="#complaints">📢 Complaints</a>
-                <a href="#lostfound">🔎 Lost & Found</a>
-                <a class="active" href="#attendance">📅 Attendance</a>
-                <a href="#todo">📝 To-Do</a>
-                <a href="#calendar">🗓 Calendar</a>
-            </nav>
+                <a href="index.html" >🏠 Dashboard</a>
+                <a href="myvault.html" class="active">📂 MyVault</a>
+                <a href="#">📢 Complaints</a>
+                <a href="lost_found.html">🔎 Lost & Found</a>
+                <a href="student-attendance.html">📅 Attendance</a>
+                <a href="to_do_list.html" >📝 To-Do</a>
+                <a href="#">🗓️ Calendar</a>
+            </nav>            
             <div class="tools">
                 <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
                 <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
