--- a/teacher-attendance.html
+++ b/teacher-attendance.html
@@ -17,11 +17,11 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="index.html" class="active">🏠 Dashboard</a>
+                <a href="index.html" >🏠 Dashboard</a>
                 <a href="myvault.html">📂 MyVault</a>
                 <a href="#">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
-                <a href="student-attendance.html">📅 Attendance</a>
+                <a href="teacher-attendance.html" class="active">📅 Attendance</a>
                 <a href="to_do_list.html" >📝 To-Do</a>
                 <a href="#">🗓️ Calendar</a>
             </nav>            
