--- a/lost_found.html
+++ b/lost_found.html
@@ -17,14 +17,14 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="index.html">🏠 Dashboard</a>
-                <a href="#">📂 MyVault</a>
+                <a href="index.html" >🏠 Dashboard</a>
+                <a href="myvault.html">📂 MyVault</a>
                 <a href="#">📢 Complaints</a>
                 <a href="lost_found.html" class="active">🔎 Lost & Found</a>
-                <a href="#">📅 Attendance</a>
+                <a href="student-attendance.html">📅 Attendance</a>
                 <a href="to_do_list.html" >📝 To-Do</a>
                 <a href="#">🗓️ Calendar</a>
-            </nav>
+            </nav>            
             <div class="tools">
                 <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
                 <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
