--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </div>
             <nav class="nav">
                 <a href="index.html" class="active">🏠 Dashboard</a>
-                <a href="myvault.html">📂 MyVault</a>
-                <a href="#">📢 Complaints</a>
-                <a href="lost_found.html">🔎 Lost & Found</a>
-                <a href="student-attendance.html">📅 Attendance</a>
-                <a href="to_do_list.html" >📝 To-Do</a>
+                <a href="Student/myvault.html">📂 MyVault</a>
+                <a href="Student/comps_std.html">📢 Complaints</a>
+                <a href="Student/lost_found.html">🔎 Lost & Found</a>
+                <a href="Student/student-attendance.html">📅 Attendance</a>
+                <a href="Student/to_do_list.html" >📝 To-Do</a>
                 <a href="#calendarSection">🗓️ Calendar</a>
             </nav>            
             <div class="tools">
