--- a/teacher.html
+++ b/teacher.html
@@ -18,11 +18,11 @@
             </div>
             <nav class="nav">
                 <a href="index.html" class="active">🏠 Dashboard</a>
-                <a href="myvault.html">📂 MyVault</a>
-                <a href="#">📢 Complaints</a>
-                <a href="lost_found.html">🔎 Lost & Found</a>
-                <a href="student-attendance.html">📅 Attendance</a>
-                <a href="to_do_list.html" >📝 To-Do</a>
+                <a href="teacher/myvault.html">📂 MyVault</a>
+                <a href="teacher/comps_tch.html">📢 Complaints</a>
+                <a href="teacher/lost_found.html">🔎 Lost & Found</a>
+                <a href="teacher/student-attendance.html">📅 Attendance</a>
+                <a href="teacher/to_do_list.html" >📝 To-Do</a>
                 <a href="#calendarSection">🗓️ Calendar</a>
             </nav>            
             <div class="tools">
@@ -37,15 +37,13 @@
                     <div class="search" style="min-width:260px;">
                         🔎 <input id="search" placeholder="Search features, files, events... " />
                     </div>
-                    <!-- <div class="clock" id="clock">16:55</div>
-                    <button class="icon-btn" id="settingsBtn">🎨</button> -->
                 </div>
             </header>
 
             <div class="container">
                 <section class="welcome">
-                    <h2>Good afternoon, Ayushi! 👋</h2>
-                    <p class="muted">Ready to make the most of your campus experience today?</p>
+                    <h2>Good afternoon, Dr. Sharma! 👋</h2>
+                    <p class="muted">Ready to make the most of your teaching experience today?</p>
                     <div class="stats">
                         <div class="stat">
                             <h3 data-count="3">3</h3>
@@ -56,8 +54,8 @@
                             <p>Tasks Pending</p>
                         </div>
                         <div class="stat">
-                            <h3 data-count="94">94</h3>
-                            <p>Attendance %</p>
+                            <h3 data-count="94">1</h3>
+                            <p>Meeting Today</p>
                         </div>
                     </div>
                 </section>
@@ -68,11 +66,11 @@
                 <section class="quick-access" id="qa">
                     <div class="card" draggable="true" data-id="vault">
                         <h3>📂 Document Vault</h3>
-                        <p>Store and organize your academic documents securely</p><a href="myvault.html">Open →</a>
+                        <p>Store and organize your documents securely</p><a href="myvault.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="complaints">
                         <h3>📢 Complaints</h3>
-                        <p>Submit and track your campus complaints</p><a href="#complaints">Open →</a>
+                        <p>Resolve the campus complaints</p><a href="#complaints">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="lost">
                         <h3>🔎 Lost & Found</h3>
@@ -80,7 +78,7 @@
                     </div>
                     <div class="card" draggable="true" data-id="attendance">
                         <h3>📅 Attendance</h3>
-                        <p>Track your class attendance and statistics</p><a href="student-attendance.html">Open →</a>
+                        <p>Mark your class attendance</p><a href="student-attendance.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="todo">
                         <h3>📝 To-Do List Manager</h3>
@@ -92,15 +90,7 @@
                     </div>
                 </section>
 
-                <section class="panel" id="recent">
-                    <h2>Recent Activity</h2>
-                    <ul class="list">
-                        <li><span>✅ Uploaded assignment for CS301</span><span class="tag green">2h ago</span></li>
-                        <li><span>📊 Checked attendance for Math201</span><span class="tag blue">1d ago</span></li>
-                        <li><span>⚠️ Submitted complaint about cafeteria</span><span class="tag orange">2d ago</span>
-                        </li>
-                    </ul>
-                </section>
+                
 
                 <section class="panel" id="upcoming">
                     <h2>Upcoming Events</h2>
