--- a/Student/student-attendance.html
+++ b/Student/student-attendance.html
@@ -16,9 +16,9 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="index.html">🏠 Dashboard</a>
+                <a href="../index.html">🏠 Dashboard</a>
                 <a href="myvault.html">📂 MyVault</a>
-                <a href="#">📢 Complaints</a>
+                <a href="comps_std.html">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
                 <a href="student-attendance.html" class="active">📅 Attendance</a>
                 <a href="to_do_list.html" >📝 To-Do</a>
@@ -34,15 +34,17 @@
             <header class="topbar">
                 <div class="topbar-inner">
                     <div class="search" style="min-width:260px;">
-                        🔎 <input id="search" placeholder="Search courses, dates..." />
+                        🔎 <input id="search" placeholder="Search features, files, events... " />
                     </div>
+                    <!-- <div class="clock" id="clock">16:55</div> -->
+                    <div class="user-profile">AS</div>
                 </div>
-            </header>
+        </header>
 
             <div class="container">
                 <section class="welcome">
                     <h2>Attendance Summary 👋</h2>
-                    <p class="muted">Here is your academic attendance overview as of September 3, 2025.</p>
+                    <p class="muted">Here is your academic attendance overview.</p>
                     <div class="stats">
                         <div class="stat">
                             <h3>100<small>%</small></h3>
