--- a/Student/comps_std.html
+++ b/Student/comps_std.html
@@ -7,11 +7,40 @@
     <link rel="stylesheet" href="comps_std.css" />
   </head>
   <body>
+    <aside class="sidebar">
+            <div class="brand">
+                <div class="logo"></div>
+                <div>SmartCampus</div>
+            </div>
+            <nav class="nav">
+                <a href="../index.html" >🏠 Dashboard</a>
+                <a href="myvault.html">📂 MyVault</a>
+                <a href="comps_std.html" class="active">📢 Complaints</a>
+                <a href="lost_found.html">🔎 Lost & Found</a>
+                <a href="student-attendance.html">📅 Attendance</a>
+                <a href="to_do_list.html" >📝 To-Do</a>
+                <a href="#">🗓️ Calendar</a>
+            </nav>            
+            <div class="tools">
+                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
+            </div>
+        </aside>
+
+        <main>
+          <header class="topbar">
+                <div class="topbar-inner">
+                    <div class="search" style="min-width:260px;">
+                        🔎 <input id="search" placeholder="Search features, files, events... " />
+                    </div>
+                    <div class="user-profile">AS</div>
+                </div>
+        </header>
     <div class="container">
-      <header>
+      <div class="head">
         <h1>SmartCampus Complaints</h1>
         <p>Submit issues and track your complaints in real-time</p>
-      </header>
+      </div>
       <div class="card">
         <h2>Submit a New Complaint</h2>
         <form id="reportForm" class="report-form">
@@ -44,6 +73,7 @@
         </table>
       </div>
     </div>
+    </main>
 
     <script>
       const form = document.getElementById("reportForm");
