--- a/Teacher/teacher-attendance.html
+++ b/Teacher/teacher-attendance.html
@@ -17,9 +17,9 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="index.html" >🏠 Dashboard</a>
+                <a href="../teacher.html" >🏠 Dashboard</a>
                 <a href="myvault.html">📂 MyVault</a>
-                <a href="#">📢 Complaints</a>
+                <a href="comps_tch.html">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
                 <a href="teacher-attendance.html" class="active">📅 Attendance</a>
                 <a href="to_do_list.html" >📝 To-Do</a>
@@ -34,14 +34,21 @@
         <!-- Main -->
         <main>
             <!-- Topbar -->
-            <header class="topbar">
-                <h1>Attendance Dashboard</h1>
-                <span>Welcome, Prof. Sharma 👋</span>
-            </header>
+        <header class="topbar">
+            <div class="topbar-inner">
+                <div class="search" style="min-width:260px;">
+                    🔎 <input id="search" placeholder="Search features, files, events... " />
+                </div>
+                <div class="user-profile">AS</div>
+            </div>
+        </header>
+            
 
             <div class="container">
                 <!-- Quick Stats -->
+                <h1>Attendance Dashboard</h1>
                 <section class="welcome">
+                    
                     <h2>Overview</h2>
                     <div class="stats">
                         <div class="stat">
@@ -65,7 +72,7 @@
 
                 <!-- Mark Attendance -->
                 <section class="panel">
-                    <h3>Mark Attendance – Computer Networks</h3>
+                    <h3>Mark Attendance - Computer Networks</h3>
                     <table class="attendance-table">
                         <thead>
                             <tr>
