--- a/Teacher/to_do_list.html
+++ b/Teacher/to_do_list.html
@@ -16,11 +16,11 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="index.html" >🏠 Dashboard</a>
+                <a href="../teacher.html" >🏠 Dashboard</a>
                 <a href="myvault.html">📂 MyVault</a>
-                <a href="#">📢 Complaints</a>
+                <a href="comps_tch.html">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
-                <a href="student-attendance.html">📅 Attendance</a>
+                <a href="teacher-attendance.html">📅 Attendance</a>
                 <a href="to_do_list.html" class="active">📝 To-Do</a>
                 <a href="#">🗓️ Calendar</a>
             </nav>            
@@ -32,10 +32,13 @@
 
         <main>
             <header class="topbar">
-                <div class="header-right">
+                <div class="topbar-inner">
+                    <div class="search" style="min-width:260px;">
+                        🔎 <input id="search" placeholder="Search features, files, events... " />
+                    </div>
                     <div class="user-profile">AS</div>
                 </div>
-            </header>
+        </header>
 
             <div class="container">
                 <div class="title-section">
