--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <a href="Student/comps_std.html">📢 Complaints</a>
                 <a href="Student/lost_found.html">🔎 Lost & Found</a>
                 <a href="Student/student-attendance.html">📅 Attendance</a>
-                <a href="Student/to_do_list.html" >📝 To-Do</a>
+                <a href="Student/to_do_list.html">📝 To-Do</a>
                 <a href="#calendarSection">🗓️ Calendar</a>
-            </nav>            
+            </nav>
             <div class="tools">
                 <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
                 <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
@@ -37,8 +37,8 @@
                     <div class="search" style="min-width:260px;">
                         🔎 <input id="search" placeholder="Search features, files, events... " />
                     </div>
-                    <!-- <div class="clock" id="clock">16:55</div>
-                    <button class="icon-btn" id="settingsBtn">🎨</button> -->
+                    <!-- <div class="clock" id="clock">16:55</div> -->
+                    <div class="user-profile">AS</div>
                 </div>
             </header>
 
