--- a/teacher.html
+++ b/teacher.html
@@ -21,7 +21,7 @@
                 <a href="teacher/myvault.html">📂 MyVault</a>
                 <a href="teacher/comps_tch.html">📢 Complaints</a>
                 <a href="teacher/lost_found.html">🔎 Lost & Found</a>
-                <a href="teacher/student-attendance.html">📅 Attendance</a>
+                <a href="teacher/teacher-attendance.html">📅 Attendance</a>
                 <a href="teacher/to_do_list.html" >📝 To-Do</a>
                 <a href="#calendarSection">🗓️ Calendar</a>
             </nav>            
@@ -37,12 +37,13 @@
                     <div class="search" style="min-width:260px;">
                         🔎 <input id="search" placeholder="Search features, files, events... " />
                     </div>
+                    <div class="user-profile">AS</div>
                 </div>
             </header>
 
             <div class="container">
                 <section class="welcome">
-                    <h2>Good afternoon, Dr. Sharma! 👋</h2>
+                    <h2>Good afternoon, Prof. Sharma! 👋</h2>
                     <p class="muted">Ready to make the most of your teaching experience today?</p>
                     <div class="stats">
                         <div class="stat">
@@ -66,23 +67,23 @@
                 <section class="quick-access" id="qa">
                     <div class="card" draggable="true" data-id="vault">
                         <h3>📂 Document Vault</h3>
-                        <p>Store and organize your documents securely</p><a href="myvault.html">Open →</a>
+                        <p>Store and organize your documents securely</p><a href="Teacher/myvault.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="complaints">
                         <h3>📢 Complaints</h3>
-                        <p>Resolve the campus complaints</p><a href="#complaints">Open →</a>
+                        <p>Resolve the campus complaints</p><a href="Teacher/comps_tch.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="lost">
                         <h3>🔎 Lost & Found</h3>
-                        <p>Report lost items or find what you're looking for</p><a href="lost_found.html">Open →</a>
+                        <p>Report lost items or find what you're looking for</p><a href="Teacher/lost_found.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="attendance">
                         <h3>📅 Attendance</h3>
-                        <p>Mark your class attendance</p><a href="student-attendance.html">Open →</a>
+                        <p>Mark your class attendance</p><a href="Teacher/teacher-attendance.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="todo">
                         <h3>📝 To-Do List Manager</h3>
-                        <p>Manage your tasks</p><a href="to_do_list.html">Open →</a>
+                        <p>Manage your tasks</p><a href="Teacher/to_do_list.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="map">
                         <h3>🗺️ Calendar</h3>
