--- a/Student/comps_std.html
+++ b/Student/comps_std.html
@@ -9,7 +9,7 @@
   <body>
     <aside class="sidebar">
             <div class="brand">
-                <div class="logo"></div>
+                <div class="logo"><img src="../img1.png"></div>
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
