--- a/Student/student-attendance.html
+++ b/Student/student-attendance.html
@@ -12,7 +12,7 @@
     <div class="app">
         <aside class="sidebar">
             <div class="brand">
-                <div class="logo"></div>
+                <div class="logo"><img src="../img1.png"></div>
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
