--- a/Teacher/teacher-attendance.html
+++ b/Teacher/teacher-attendance.html
@@ -13,7 +13,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="brand">
-                <div class="logo"></div>
+                <div class="logo"><img src="../img1.png"></div>
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
