--- a/teacher.html
+++ b/teacher.html
@@ -86,7 +86,7 @@
                         <p>Manage your tasks</p><a href="Teacher/to_do_list.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="map">
-                        <h3>🗺️ Calendar</h3>
+                        <h3>🗓️ Calendar</h3>
                         <p>Never miss your academic deadlines</p><a href="#calendarSection">Open →</a>
                     </div>
                 </section>
