--- a/index.html
+++ b/index.html
@@ -68,26 +68,26 @@
                 <section class="quick-access" id="qa">
                     <div class="card" draggable="true" data-id="vault">
                         <h3>📂 Document Vault</h3>
-                        <p>Store and organize your academic documents securely</p><a href="myvault.html">Open →</a>
+                        <p>Store and organize your academic documents securely</p><a href="Student/myvault.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="complaints">
                         <h3>📢 Complaints</h3>
-                        <p>Submit and track your campus complaints</p><a href="#complaints">Open →</a>
+                        <p>Submit and track your campus complaints</p><a href="Student/comps_std.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="lost">
                         <h3>🔎 Lost & Found</h3>
-                        <p>Report lost items or find what you're looking for</p><a href="lost_found.html">Open →</a>
+                        <p>Report lost items or find what you're looking for</p><a href="Student/lost_found.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="attendance">
                         <h3>📅 Attendance</h3>
-                        <p>Track your class attendance and statistics</p><a href="student-attendance.html">Open →</a>
+                        <p>Track your class attendance and statistics</p><a href="Student/student-attendance.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="todo">
                         <h3>📝 To-Do List Manager</h3>
-                        <p>Manage your tasks</p><a href="to_do_list.html">Open →</a>
+                        <p>Manage your tasks</p><a href="Student/to_do_list.html">Open →</a>
                     </div>
                     <div class="card" draggable="true" data-id="map">
-                        <h3>🗺️ Calendar</h3>
+                        <h3>🗓️ Calendar</h3>
                         <p>Never miss your academic deadlines</p><a href="#calendarSection">Open →</a>
                     </div>
                 </section>
