--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                     <div class="search" style="min-width:260px;">
                         🔎 <input id="search" placeholder="Search features, files, events... " />
                     </div>
-                    <!-- <div class="clock" id="clock">16:55</div> -->
                     <div class="user-profile">AS</div>
                 </div>
             </header>
@@ -68,7 +67,8 @@
                 <section class="quick-access" id="qa">
                     <div class="card" draggable="true" data-id="vault">
                         <h3>📂 Document Vault</h3>
-                        <p>Store and organize your academic documents securely</p><a href="Student/myvault.html">Open →</a>
+                        <p>Store and organize your academic documents securely</p><a href="Student/myvault.html">Open
+                            →</a>
                     </div>
                     <div class="card" draggable="true" data-id="complaints">
                         <h3>📢 Complaints</h3>
@@ -76,11 +76,13 @@
                     </div>
                     <div class="card" draggable="true" data-id="lost">
                         <h3>🔎 Lost & Found</h3>
-                        <p>Report lost items or find what you're looking for</p><a href="Student/lost_found.html">Open →</a>
+                        <p>Report lost items or find what you're looking for</p><a href="Student/lost_found.html">Open
+                            →</a>
                     </div>
                     <div class="card" draggable="true" data-id="attendance">
                         <h3>📅 Attendance</h3>
-                        <p>Track your class attendance and statistics</p><a href="Student/student-attendance.html">Open →</a>
+                        <p>Track your class attendance and statistics</p><a href="Student/student-attendance.html">Open
+                            →</a>
                     </div>
                     <div class="card" draggable="true" data-id="todo">
                         <h3>📝 To-Do List Manager</h3>
