--- a/Teacher/teacher-attendance.html
+++ b/Teacher/teacher-attendance.html
@@ -23,7 +23,7 @@
                 <a href="lost_found.html">🔎 Lost & Found</a>
                 <a href="teacher-attendance.html" class="active">📅 Attendance</a>
                 <a href="to_do_list.html" >📝 To-Do</a>
-                <a href="#">🗓️ Calendar</a>
+                <a href="../teacher.html#calendarSection">🗓️ Calendar</a>
             </nav>            
             <div class="tools">
                 <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
