--- a/Student/lost_found.html
+++ b/Student/lost_found.html
@@ -19,7 +19,7 @@
       <nav class="nav">
         <a href="../index.html">🏠 Dashboard</a>
         <a href="myvault.html">📂 MyVault</a>
-        <a href="#">📢 Complaints</a>
+        <a href="comps_std.html">📢 Complaints</a>
         <a href="lost_found.html" class="active">🔎 Lost & Found</a>
         <a href="student-attendance.html">📅 Attendance</a>
         <a href="to_do_list.html">📝 To-Do</a>
