--- a/Student/myvault.html
+++ b/Student/myvault.html
@@ -18,7 +18,7 @@
             <nav class="nav">
                 <a href="index.html" >🏠 Dashboard</a>
                 <a href="myvault.html" class="active">📂 MyVault</a>
-                <a href="#">📢 Complaints</a>
+                <a href="comps_std.html">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
                 <a href="student-attendance.html">📅 Attendance</a>
                 <a href="to_do_list.html" >📝 To-Do</a>
@@ -34,10 +34,13 @@
     <div class="main">
         <!-- Topbar -->
         <header class="topbar">
-            <input type="text" class="search" placeholder="Search documents..." />
-            <div class="profile">
-                <img src="https://via.placeholder.com/40" alt="Profile" />
-            </div>
+                <div class="topbar-inner">
+                    <div class="search" style="min-width:260px;">
+                        🔎 <input id="search" placeholder="Search features, files, events... " />
+                    </div>
+                    <!-- <div class="clock" id="clock">16:55</div> -->
+                    <div class="user-profile">AS</div>
+                </div>
         </header>
 
         <!-- Page Content -->
