--- a/teacher.html
+++ b/teacher.html
@@ -13,7 +13,7 @@
     <div class="app">
         <aside class="sidebar">
             <div class="brand">
-                <div class="logo"></div>
+                <div class="logo"><img src="img1.png"></div>
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
@@ -61,9 +61,7 @@
                     </div>
                 </section>
 
-                <!-- <div class="section-title">
-                    <h2>Quick Access</h2><small class="muted">Drag to reorder • Saved automatically</small>
-                </div> -->
+                
                 <section class="quick-access" id="qa">
                     <div class="card" draggable="true" data-id="vault">
                         <h3>📂 Document Vault</h3>
