--- a/teacher.html
+++ b/teacher.html
@@ -26,8 +26,8 @@
                 <a href="#calendarSection">🗓️ Calendar</a>
             </nav>            
             <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
+                <!-- <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button> -->
             </div>
         </aside>
 
@@ -43,7 +43,7 @@
 
             <div class="container">
                 <section class="welcome">
-                    <h2>Good afternoon, Prof. Sharma! 👋</h2>
+                    <h2>Good afternoon, Prof. Sharma! </h2>
                     <p class="muted">Ready to make the most of your teaching experience today?</p>
                     <div class="stats">
                         <div class="stat">
@@ -94,8 +94,8 @@
                 <section class="panel" id="upcoming">
                     <h2>Upcoming Events</h2>
                     <ul class="list">
-                        <li><span>📖 Physics Midterm</span><span class="tag blue">Tomorrow, 10:00 AM</span></li>
-                        <li><span>👥 Study Group Meeting</span><span class="tag green">Friday, 2:00 PM</span></li>
+                        <li><span> Physics Midterm</span><span class="tag blue">Tomorrow, 10:00 AM</span></li>
+                        <li><span> Study Group Meeting</span><span class="tag green">Friday, 2:00 PM</span></li>
                     </ul>
                 </section>
 
