--- a/Student/myvault.html
+++ b/Student/myvault.html
@@ -6,49 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyVault - SmartCampus</title>
     <link rel="stylesheet" href="myvault.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
     <!-- Sidebar -->
     <aside class="sidebar">
-            <div class="brand">
-                <div class="logo"><img src="../img1.png"></div>
-                <div>SmartCampus</div>
-            </div>
-            <nav class="nav">
-                <a href="index.html" >🏠 Dashboard</a>
-                <a href="myvault.html" class="active">📂 MyVault</a>
-                <a href="comps_std.html">📢 Complaints</a>
-                <a href="lost_found.html">🔎 Lost & Found</a>
-                <a href="student-attendance.html">📅 Attendance</a>
-                <a href="to_do_list.html" >📝 To-Do</a>
-                <a href="../index.html#calendarSection">🗓️ Calendar</a>
-            </nav>            
-            <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-            </div>
-        </aside>
+        <div class="brand">
+            <div class="logo"><img src="../img1.png"></div>
+            <div>SmartCampus</div>
+        </div>
+        <nav class="nav">
+            <a href="index.html">🏠 Dashboard</a>
+            <a href="myvault.html" class="active">📂 MyVault</a>
+            <a href="comps_std.html">📢 Complaints</a>
+            <a href="lost_found.html">🔎 Lost & Found</a>
+            <a href="student-attendance.html">📅 Attendance</a>
+            <a href="to_do_list.html">📝 To-Do</a>
+            <a href="../index.html#calendarSection">🗓️ Calendar</a>
+        </nav>
+        <div class="tools">
+            <!-- <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button> -->
+        </div>
+    </aside>
 
-    <!-- Main Section -->
     <div class="main">
-        <!-- Topbar -->
         <header class="topbar">
-                <div class="topbar-inner">
-                    <div class="search" style="min-width:260px;">
-                        🔎 <input id="search" placeholder="Search features, files, events... " />
-                    </div>
-                    <!-- <div class="clock" id="clock">16:55</div> -->
-                    <div class="user-profile">AS</div>
+            <div class="topbar-inner">
+                <div class="search" style="min-width:260px;">
+                    🔎 <input id="search" placeholder="Search features, files, events... " />
                 </div>
+                <!-- <div class="clock" id="clock">16:55</div> -->
+                <div class="user-profile">AS</div>
+            </div>
         </header>
 
-        <!-- Page Content -->
         <div class="content">
             <h1>MyVault</h1>
-            <!-- Stats Summary -->
             <section class="stats">
-                <h2>Vault Summary 📊</h2>
+                <h2>Vault Summary </h2>
                 <div class="stats-grid">
                     <div class="stat-card">
                         <h3>24</h3>
@@ -82,7 +79,7 @@
                 <h2>Your Documents</h2>
                 <div class="doc-grid">
                     <div class="doc-card">
-                        <div class="doc-icon">📄</div>
+                        <div class="doc-icon"><i class="fa-solid fa-file"></i></div>
                         <p class="doc-name">Assignment1.pdf</p>
                         <div class="doc-actions">
                             <button>View</button>
@@ -90,7 +87,7 @@
                         </div>
                     </div>
                     <div class="doc-card">
-                        <div class="doc-icon">📄</div>
+                        <div class="doc-icon"><i class="fa-solid fa-file"></i></div>
                         <p class="doc-name">ID_Card.png</p>
                         <div class="doc-actions">
                             <button>View</button>
