--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <a href="#calendarSection">🗓️ Calendar</a>
             </nav>
             <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
+                <!-- <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button> -->
             </div>
         </aside>
 
@@ -43,7 +43,7 @@
 
             <div class="container">
                 <section class="welcome">
-                    <h2>Good afternoon, Ayushi! 👋</h2>
+                    <h2>Good afternoon, Ayushi! </h2>
                     <p class="muted">Ready to make the most of your campus experience today?</p>
                     <div class="stats">
                         <div class="stat">
@@ -61,9 +61,6 @@
                     </div>
                 </section>
 
-                <!-- <div class="section-title">
-                    <h2>Quick Access</h2><small class="muted">Drag to reorder • Saved automatically</small>
-                </div> -->
                 <section class="quick-access" id="qa">
                     <div class="card" draggable="true" data-id="vault">
                         <h3>📂 Document Vault</h3>
@@ -97,9 +94,9 @@
                 <section class="panel" id="recent">
                     <h2>Recent Activity</h2>
                     <ul class="list">
-                        <li><span>✅ Uploaded assignment for CS301</span><span class="tag green">2h ago</span></li>
-                        <li><span>📊 Checked attendance for Math201</span><span class="tag blue">1d ago</span></li>
-                        <li><span>⚠️ Submitted complaint about cafeteria</span><span class="tag orange">2d ago</span>
+                        <li><span> Uploaded assignment for CS301</span><span class="tag green">2h ago</span></li>
+                        <li><span> Checked attendance for Math201</span><span class="tag blue">1d ago</span></li>
+                        <li><span> Submitted complaint about cafeteria</span><span class="tag orange">2d ago</span>
                         </li>
                     </ul>
                 </section>
@@ -107,8 +104,8 @@
                 <section class="panel" id="upcoming">
                     <h2>Upcoming Events</h2>
                     <ul class="list">
-                        <li><span>📖 Physics Midterm</span><span class="tag blue">Tomorrow, 10:00 AM</span></li>
-                        <li><span>👥 Study Group Meeting</span><span class="tag green">Friday, 2:00 PM</span></li>
+                        <li><span> Physics Midterm</span><span class="tag blue">Tomorrow, 10:00 AM</span></li>
+                        <li><span> Study Group Meeting</span><span class="tag green">Friday, 2:00 PM</span></li>
                     </ul>
                 </section>
 
@@ -279,49 +276,7 @@
         </main>
     </div>
 
-
-    <div class="modal" id="eventModal">
-        <div class="modal-card">
-            <h3 id="modalTitle">Add Event</h3>
-            <div class="field">
-                <label>Title</label>
-                <input id="evTitle" placeholder="e.g., Data Structures Lecture" />
-            </div>
-            <div class="row">
-                <div class="field">
-                    <label>Date</label>
-                    <input type="date" id="evDate" />
-                </div>
-                <div class="field">
-                    <label>Category</label>
-                    <select id="evCategory">
-                        <option value="class">Class</option>
-                        <option value="exam">Exam</option>
-                        <option value="club">Club</option>
-                        <option value="personal" selected>Personal</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="field">
-                    <label>Color</label>
-                    <input type="color" id="evColor" value="#2b9c92" />
-                </div>
-                <div class="field">
-                    <label>Description</label>
-                    <input id="evDesc" placeholder="optional" />
-                </div>
-            </div>
-            <div class="actions">
-                <button class="btn danger hidden" id="deleteEvent">Delete</button>
-                <button class="btn" id="cancelEvent">Cancel</button>
-                <button class="btn primary" id="saveEvent">Save</button>
-            </div>
-        </div>
-
-    </div>
-
-    <button class="fab" id="fab" title="Quick create">+</button>
+    <button class="fab" id="fab">+</button>
 
 </body>
 
