--- a/Student/lost_found.html
+++ b/Student/lost_found.html
@@ -24,10 +24,10 @@
         <a href="to_do_list.html">📝 To-Do</a>
         <a href="../index.html#calendarSection">🗓️ Calendar</a>
       </nav>
-      <div class="tools">
-        <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-        <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-      </div>
+      <!-- <div class="tools">
+        <button class="tool-btn" id="toggleTheme">Toggle Dark</button>
+        <button class="tool-btn" id="openDrawer">Notifications</button>
+      </div> -->
     </aside>
 
     <main>
@@ -69,8 +69,8 @@
               the
               main counter.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Found At:</strong> Cafeteria</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 4, 2025</div>
+              <div class="meta-item"><span></span><strong>Found At:</strong> Cafeteria</div>
+              <div class="meta-item"><span></span><strong>Date:</strong> September 4, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">View Details →</a>
@@ -85,8 +85,8 @@
             <p>Found an iPhone with a clear case on a bench in the central quad. The screen is on, but it's locked.
               Currently holding onto it.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Found At:</strong> Central Quad Bench</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 3, 2025</div>
+              <div class="meta-item"><strong>Found At:</strong> Central Quad Bench</div>
+              <div class="meta-item"><strong>Date:</strong> September 3, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">Claim Item →</a>
@@ -102,8 +102,8 @@
               important
               class notes for Physics 101.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Last Seen:</strong> Near Library Entrance</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 2, 2025</div>
+              <div class="meta-item"><strong>Last Seen:</strong> Near Library Entrance</div>
+              <div class="meta-item"><strong>Date:</strong> September 2, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">Contact Owner →</a>
@@ -119,8 +119,8 @@
               range.
               Probably left it in Room 301 or 302.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Last Seen:</strong> Room 301, Engineering Block</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 1, 2025</div>
+              <div class="meta-item"><strong>Last Seen:</strong> Room 301, Engineering Block</div>
+              <div class="meta-item"><strong>Date:</strong> September 1, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">Contact Owner →</a>
