--- a/Student/student-attendance.html
+++ b/Student/student-attendance.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attendance — SmartCampus</title>
-    <link rel="stylesheet" href="student-attendance.css">
+    <link rel="stylesheet" href="student-attendance.css" />
 </head>
 
 <body>
     <div class="app">
         <aside class="sidebar">
             <div class="brand">
-                <div class="logo"><img src="../img1.png"></div>
+                <div class="logo"><img src="../img1.png" /></div>
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
@@ -21,29 +21,30 @@
                 <a href="comps_std.html">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
                 <a href="student-attendance.html" class="active">📅 Attendance</a>
-                <a href="to_do_list.html" >📝 To-Do</a>
+                <a href="to_do_list.html">📝 To-Do</a>
                 <a href="../index.html#calendarSection">🗓️ Calendar</a>
-            </nav>            
-            <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-            </div>
+            </nav>
+            <!-- <div class="tools">
+                <button class="tool-btn" id="toggleTheme">Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer">Notifications</button>
+            </div> -->
         </aside>
 
         <main>
             <header class="topbar">
                 <div class="topbar-inner">
-                    <div class="search" style="min-width:260px;">
-                        🔎 <input id="search" placeholder="Search features, files, events... " />
+                    <div class="search" style="min-width: 260px">
+                        🔎
+                        <input id="search" placeholder="Search features, files, events... " />
                     </div>
                     <!-- <div class="clock" id="clock">16:55</div> -->
                     <div class="user-profile">AS</div>
                 </div>
-        </header>
+            </header>
 
             <div class="container">
                 <section class="welcome">
-                    <h2>Attendance Summary 👋</h2>
+                    <h2>Attendance Summary</h2>
                     <p class="muted">Here is your academic attendance overview.</p>
                     <div class="stats">
                         <div class="stat">
@@ -65,9 +66,9 @@
                     </div>
                 </section>
 
-                <section class="panel subject-breakdown">
+                <section class="subject-breakdown">
                     <h2>Subject-wise Breakdown</h2>
-                    <div class="panel-content">
+                    <div class="SUbjects">
                         <div class="subject-card">
                             <div class="card-header">
                                 <h4>Data Structures (DSOOPS)</h4>
@@ -75,7 +76,7 @@
                             </div>
                             <p class="subject-stats">Attended 3 of 3 classes held</p>
                             <div class="progress-bar">
-                                <div class="progress-fill high" style="width:100%;"></div>
+                                <div class="progress-fill high" style="width: 100%"></div>
                             </div>
                         </div>
                         <div class="subject-card">
@@ -85,7 +86,7 @@
                             </div>
                             <p class="subject-stats">Attended 2 of 2 classes held</p>
                             <div class="progress-bar">
-                                <div class="progress-fill high" style="width:100%;"></div>
+                                <div class="progress-fill high" style="width: 100%"></div>
                             </div>
                         </div>
                         <div class="subject-card">
@@ -95,7 +96,7 @@
                             </div>
                             <p class="subject-stats">Attended 2 of 2 classes held</p>
                             <div class="progress-bar">
-                                <div class="progress-fill high" style="width:100%;"></div>
+                                <div class="progress-fill high" style="width: 100%"></div>
                             </div>
                         </div>
                         <div class="subject-card">
@@ -105,7 +106,7 @@
                             </div>
                             <p class="subject-stats">Attended 2 of 2 classes held</p>
                             <div class="progress-bar">
-                                <div class="progress-fill high" style="width:100%;"></div>
+                                <div class="progress-fill high" style="width: 100%"></div>
                             </div>
                         </div>
                         <div class="subject-card">
@@ -115,56 +116,45 @@
                             </div>
                             <p class="subject-stats">Attended 0 of 0 classes held</p>
                             <div class="progress-bar">
-                                <div class="progress-fill high" style="width:100%;"></div>
+                                <div class="progress-fill high" style="width: 100%"></div>
                             </div>
                         </div>
                     </div>
                 </section>
 
-                <!-- Attendance Comparison (pure HTML + CSS chart) -->
+                <!-- Attendance -->
                 <section class="panel">
                     <h2>Attendance Comparison</h2>
                     <div class="bar-chart">
-                        <div class="bar"><span class="label">DSOOPS</span>
-                            <div class="bar-fill" style="width:95%"></div><span class="value">95%</span>
+                        <div class="bar">
+                            <span class="label">DSOOPS</span>
+                            <div class="bar-fill" style="width: 95%"></div>
+                            <span class="value">95%</span>
                         </div>
-                        <div class="bar"><span class="label">Discrete</span>
-                            <div class="bar-fill" style="width:88%"></div><span class="value">88%</span>
+                        <div class="bar">
+                            <span class="label">Discrete</span>
+                            <div class="bar-fill" style="width: 88%"></div>
+                            <span class="value">88%</span>
                         </div>
-                        <div class="bar"><span class="label">FEE II</span>
-                            <div class="bar-fill" style="width:76%"></div><span class="value">76%</span>
+                        <div class="bar">
+                            <span class="label">FEE II</span>
+                            <div class="bar-fill" style="width: 76%"></div>
+                            <span class="value">76%</span>
                         </div>
-                        <div class="bar"><span class="label">OOSE</span>
-                            <div class="bar-fill" style="width:92%"></div><span class="value">92%</span>
+                        <div class="bar">
+                            <span class="label">OOSE</span>
+                            <div class="bar-fill" style="width: 92%"></div>
+                            <span class="value">92%</span>
                         </div>
-                        <div class="bar"><span class="label">DBMS</span>
-                            <div class="bar-fill" style="width:100%"></div><span class="value">100%</span>
+                        <div class="bar">
+                            <span class="label">DBMS</span>
+                            <div class="bar-fill" style="width: 100%"></div>
+                            <span class="value">100%</span>
                         </div>
                     </div>
                 </section>
-
             </div>
         </main>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal" id="bunksModal">
-        <div class="modal-card">
-            <h3>Bunks Available per Subject</h3>
-            <p style="margin-top:-8px; font-size:14px; color:#6b7280;">
-                *Based on a 14-week semester with a 75% attendance requirement.
-            </p>
-            <ul class="list bunks-list">
-                <li><span>Data Structures (DSOOPS)</span> <span class="chip">17</span></li>
-                <li><span>Discrete Mathematics</span> <span class="chip">10</span></li>
-                <li><span>Elec. Engineering (FEE II)</span> <span class="chip">10</span></li>
-                <li><span>Software Engineering (OOSE)</span> <span class="chip">10</span></li>
-                <li><span>Database Management (DBMS)</span> <span class="chip">7</span></li>
-            </ul>
-            <div class="actions">
-                <button class="btn primary">Close</button>
-            </div>
-        </div>
     </div>
 </body>
 
