--- a/Student/lost_found.html
+++ b/Student/lost_found.html
@@ -24,10 +24,10 @@
         <a href="to_do_list.html">📝 To-Do</a>
         <a href="../index.html#calendarSection">🗓️ Calendar</a>
       </nav>
-      <div class="tools">
-        <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-        <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-      </div>
+      <!-- <div class="tools">
+        <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+        <button class="tool-btn" id="openDrawer"> Notifications</button>
+      </div> -->
     </aside>
 
     <main>
@@ -36,7 +36,6 @@
           <div class="search" style="min-width:260px;">
             🔎 <input id="search" placeholder="Search features, files, events... " />
           </div>
-          <!-- <div class="clock" id="clock">16:55</div> -->
           <div class="user-profile">AS</div>
         </div>
       </header>
@@ -49,8 +48,8 @@
         </div>
 
         <div class="btn-group">
-          <a href="#lostModal" class="btn btn-lost">❗ Report a Lost Item</a>
-          <a href="#foundModal" class="btn btn-found">✅ Report a Found Item</a>
+          <a href="#lostModal" class="btn btn-lost"> Report a Lost Item</a>
+          <a href="#foundModal" class="btn btn-found"> Report a Found Item</a>
         </div>
 
         <div class="filter-bar">
@@ -65,9 +64,8 @@
               <h3>Student ID Card</h3>
               <span class="tag tag-found">Found</span>
             </div>
-            <p>Found a student ID card for 'Ayushi Sharma' on the floor of the cafeteria. Left it with the cashier at
-              the
-              main counter.</p>
+            <p>Found a student ID card for 'Rohit Sharma' on the floor of the cafeteria. Left it with the cashier at
+              the main counter.</p>
             <div class="card-meta">
               <div class="meta-item"><span>📍</span><strong>Found At:</strong> Cafeteria</div>
               <div class="meta-item"><span>📅</span><strong>Date:</strong> September 4, 2025</div>
