--- a/Student/to_do_list.html
+++ b/Student/to_do_list.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List - SmartCampus Dashboard</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="to_do_list.css">
 </head>
 
@@ -16,18 +17,18 @@
                 <div>SmartCampus</div>
             </div>
             <nav class="nav">
-                <a href="../index.html" >🏠 Dashboard</a>
+                <a href="../index.html">🏠 Dashboard</a>
                 <a href="myvault.html">📂 MyVault</a>
                 <a href="comps_std.html">📢 Complaints</a>
                 <a href="lost_found.html">🔎 Lost & Found</a>
                 <a href="student-attendance.html">📅 Attendance</a>
                 <a href="to_do_list.html" class="active">📝 To-Do</a>
                 <a href="../index.html#calendarSection">🗓️ Calendar</a>
-            </nav>            
-            <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-            </div>
+            </nav>
+            <!-- <div class="tools">
+                <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button>
+            </div> -->
         </aside>
 
         <main>
@@ -36,10 +37,9 @@
                     <div class="search" style="min-width:260px;">
                         🔎 <input id="search" placeholder="Search features, files, events... " />
                     </div>
-                    <!-- <div class="clock" id="clock">16:55</div> -->
                     <div class="user-profile">AS</div>
                 </div>
-        </header>
+            </header>
 
             <div class="container">
                 <div class="title-section">
@@ -90,9 +90,14 @@
                                     </div>
                                 </div>
                                 <div class="task-actions">
-                                    <button class="action-btn" title="Edit">✏️</button>
-                                    <button class="action-btn" title="Delete">🗑️</button>
+                                    <button class="action-btn" title="Edit">
+                                        <i class="fa-solid fa-pencil"></i>
+                                    </button>
+                                    <button class="action-btn" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
                                 </div>
+
                             </div>
                         </li>
                         <li class="completed">
@@ -106,8 +111,12 @@
                                     </div>
                                 </div>
                                 <div class="task-actions">
-                                    <button class="action-btn" title="Edit">✏️</button>
-                                    <button class="action-btn" title="Delete">🗑️</button>
+                                    <button class="action-btn" title="Edit">
+                                        <i class="fa-solid fa-pencil"></i>
+                                    </button>
+                                    <button class="action-btn" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
                                 </div>
                             </div>
                         </li>
@@ -122,8 +131,12 @@
                                     </div>
                                 </div>
                                 <div class="task-actions">
-                                    <button class="action-btn" title="Edit">✏️</button>
-                                    <button class="action-btn" title="Delete">🗑️</button>
+                                    <button class="action-btn" title="Edit">
+                                        <i class="fa-solid fa-pencil"></i>
+                                    </button>
+                                    <button class="action-btn" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
                                 </div>
                             </div>
                         </li>
@@ -138,8 +151,12 @@
                                     </div>
                                 </div>
                                 <div class="task-actions">
-                                    <button class="action-btn" title="Edit">✏️</button>
-                                    <button class="action-btn" title="Delete">🗑️</button>
+                                    <button class="action-btn" title="Edit">
+                                        <i class="fa-solid fa-pencil"></i>
+                                    </button>
+                                    <button class="action-btn" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
                                 </div>
                             </div>
                         </li>
