--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <a href="Student/to_do_list.html">📝 To-Do</a>
                 <a href="#calendarSection">🗓️ Calendar</a>
             </nav>
-            <div class="tools">
-                <!-- <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer"> Notifications</button> -->
-            </div>
+            <!-- <div class="tools">
+                <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button>
+            </div> -->
         </aside>
 
         <main>
@@ -62,30 +62,30 @@
                 </section>
 
                 <section class="quick-access" id="qa">
-                    <div class="card" draggable="true" data-id="vault">
+                    <div class="card" data-id="vault">
                         <h3>📂 Document Vault</h3>
                         <p>Store and organize your academic documents securely</p><a href="Student/myvault.html">Open
                             →</a>
                     </div>
-                    <div class="card" draggable="true" data-id="complaints">
+                    <div class="card" data-id="complaints">
                         <h3>📢 Complaints</h3>
                         <p>Submit and track your campus complaints</p><a href="Student/comps_std.html">Open →</a>
                     </div>
-                    <div class="card" draggable="true" data-id="lost">
+                    <div class="card" data-id="lost">
                         <h3>🔎 Lost & Found</h3>
                         <p>Report lost items or find what you're looking for</p><a href="Student/lost_found.html">Open
                             →</a>
                     </div>
-                    <div class="card" draggable="true" data-id="attendance">
+                    <div class="card" data-id="attendance">
                         <h3>📅 Attendance</h3>
                         <p>Track your class attendance and statistics</p><a href="Student/student-attendance.html">Open
                             →</a>
                     </div>
-                    <div class="card" draggable="true" data-id="todo">
+                    <div class="card" data-id="todo">
                         <h3>📝 To-Do List Manager</h3>
                         <p>Manage your tasks</p><a href="Student/to_do_list.html">Open →</a>
                     </div>
-                    <div class="card" draggable="true" data-id="map">
+                    <div class="card" data-id="map">
                         <h3>🗓️ Calendar</h3>
                         <p>Never miss your academic deadlines</p><a href="#calendarSection">Open →</a>
                     </div>
@@ -246,11 +246,11 @@
                         </div>
                         <div class="day">
                             <div class="dnum">31</div>
-                            <div class="event" draggable="true" style="background: rgb(59, 130, 246);">DS Lecture</div>
+                            <div class="event" style="background: rgb(59, 130, 246);">DS Lecture</div>
                         </div>
                         <div class="day other">
                             <div class="dnum">1</div>
-                            <div class="event" draggable="true" style="background: rgb(239, 68, 68);">Physics Midterm
+                            <div class="event" style="background: rgb(239, 68, 68);">Physics Midterm
                             </div>
                         </div>
                         <div class="day other">
@@ -258,7 +258,7 @@
                         </div>
                         <div class="day other">
                             <div class="dnum">3</div>
-                            <div class="event" draggable="true" style="background: rgb(168, 85, 247);">Robotics Club
+                            <div class="event" style="background: rgb(168, 85, 247);">Robotics Club
                             </div>
                         </div>
                         <div class="day other">
