--- a/Teacher/myvault.html
+++ b/Teacher/myvault.html
@@ -24,10 +24,10 @@
                 <a href="to_do_list.html" >📝 To-Do</a>
                 <a href="../teacher.html#calendarSection">🗓️ Calendar</a>
             </nav>            
-            <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-            </div>
+            <!-- <div class="tools">
+                <button class="tool-btn" id="toggleTheme">Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button>
+            </div> -->
         </aside>
 
     <!-- Main Section -->
@@ -48,7 +48,7 @@
             <h1>MyVault</h1>
             <!-- Stats Summary -->
             <section class="stats">
-                <h2>Vault Summary 📊</h2>
+                <h2>Vault Summary </h2>
                 <div class="stats-grid">
                     <div class="stat-card">
                         <h3>24</h3>
