--- a/Teacher/teacher-attendance.html
+++ b/Teacher/teacher-attendance.html
@@ -25,10 +25,10 @@
                 <a href="to_do_list.html" >📝 To-Do</a>
                 <a href="../teacher.html#calendarSection">🗓️ Calendar</a>
             </nav>            
-            <div class="tools">
-                <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-                <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
-            </div>
+            <!-- <div class="tools">
+                <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+                <button class="tool-btn" id="openDrawer"> Notifications</button>
+            </div> -->
         </aside>
 
         <!-- Main -->
