--- a/login.html
+++ b/login.html
@@ -29,10 +29,10 @@
         <a href="#">Forgot password?</a>
       </div>
 
-      <button type="submit" class="btn">Sign In</button>
+      <button type="submit" class="btn">Log In</button>
 
       <div class="signup">
-        Don’t have an account? <a href="signup.html">Sign up</a>
+        Don't have an account? <a href="signup.html">Sign up</a>
       </div>
     </form>
   </div>
