--- a/Teacher/lost_found.html
+++ b/Teacher/lost_found.html
@@ -26,8 +26,8 @@
         <a href="../teacher.html#calendarSection">🗓️ Calendar</a>
       </nav>
       <div class="tools">
-        <button class="tool-btn" id="toggleTheme">🌗 Toggle Dark</button>
-        <button class="tool-btn" id="openDrawer">🔔 Notifications</button>
+        <!-- <button class="tool-btn" id="toggleTheme"> Toggle Dark</button>
+        <button class="tool-btn" id="openDrawer"> Notifications</button> -->
       </div>
     </aside>
 
@@ -50,8 +50,8 @@
         </div>
 
         <div class="btn-group">
-          <a href="#lostModal" class="btn btn-lost">❗ Report a Lost Item</a>
-          <a href="#foundModal" class="btn btn-found">✅ Report a Found Item</a>
+          <a href="#lostModal" class="btn btn-lost"> Report a Lost Item</a>
+          <a href="#foundModal" class="btn btn-found"> Report a Found Item</a>
         </div>
 
         <div class="filter-bar">
@@ -70,8 +70,8 @@
               the
               main counter.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Found At:</strong> Cafeteria</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 4, 2025</div>
+              <div class="meta-item"><span></span><strong>Found At:</strong> Cafeteria</div>
+              <div class="meta-item"><span></span><strong>Date:</strong> September 4, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">View Details →</a>
@@ -86,8 +86,8 @@
             <p>Found an iPhone with a clear case on a bench in the central quad. The screen is on, but it's locked.
               Currently holding onto it.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Found At:</strong> Central Quad Bench</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 3, 2025</div>
+              <div class="meta-item"><span></span><strong>Found At:</strong> Central Quad Bench</div>
+              <div class="meta-item"><span></span><strong>Date:</strong> September 3, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">Claim Item →</a>
@@ -103,8 +103,8 @@
               important
               class notes for Physics 101.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Last Seen:</strong> Near Library Entrance</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 2, 2025</div>
+              <div class="meta-item"><span></span><strong>Last Seen:</strong> Near Library Entrance</div>
+              <div class="meta-item"><span></span><strong>Date:</strong> September 2, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">Contact Owner →</a>
@@ -120,8 +120,8 @@
               range.
               Probably left it in Room 301 or 302.</p>
             <div class="card-meta">
-              <div class="meta-item"><span>📍</span><strong>Last Seen:</strong> Room 301, Engineering Block</div>
-              <div class="meta-item"><span>📅</span><strong>Date:</strong> September 1, 2025</div>
+              <div class="meta-item"><span></span><strong>Last Seen:</strong> Room 301, Engineering Block</div>
+              <div class="meta-item"><span></span><strong>Date:</strong> September 1, 2025</div>
             </div>
             <div class="card-footer">
               <a href="#">Contact Owner →</a>
